--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -408,9 +408,22 @@ Must
 
 ## ??? Does he prohibited clean his room VS Is he prohibited clean his room
 
+## Didn't have VS There wasn't
 
+- Cities would be nicer places if it didn't have traffic.
+
+- Cities would be nicer places if there wasn't traffic.
+
+- Cities would be nicer places if there was less traffic.
+
+  
 
 # ARTICLES - CONTEXT - Small talks
+
+## General
+
+- Share with us
+- Over to you - Вам слово
 
 ## Greeting
 
@@ -490,6 +503,16 @@ Must
 - inquire is inform ask
 - I regret -> I sorry (info)
 
+## Slang
+
+- Chick flicks - кино для девочек, мелодрамы
+- Сouch potatoes - "овощи", постоянно сидят дома и смотрят телевизор
+
+## Countries
+
+- Budapest [**bu**-da-pesht] is the capital of Hungary [ˈhʌŋɡəri].
+  - Hungarians [hʌŋˈɡeriən] are people who live in Hungary.
+
 # ARTICLES - CONTEXT - OTHERS
 
 ## Abbreviation
@@ -521,12 +544,135 @@ Must
 
 # ARTICLES - PHRASAL VERBS
 
+## General
+
+- Let's wrap up - Давайте заканчивать
+
+
+
+## Business phrasal verbs
+
+**SORT OUT**
+
+Meaning: To resolve/fix a problem or difficult situation.
+
+I don't care how you do it, but you have to SORT this problem OUT now! If you don't, it's just going to get worse.
+
+"Are you still having problems with Sue at work?"
+
+"No, we had a long conversation last weekend and SORTED it OUT. Everything is fine between us now."
+
+**TAKE CARE OF**
+
+Meaning: To be responsible for making sure that something is done.
+
+Peter, it's really important that they are told about the changes. I can't do it. So, can you TAKE CARE OF it for me?
+
+Don't worry, I'll TAKE CARE OF organising the party (getting the drinks, booking the place etc...). You just have to invite people to it.
+
+**CARRY OUT**
+
+Meaning: To do/perform a task (or tasks) you have promised or been told to do.
+
+Ok, you need to CARRY OUT my instructions exactly as I say. First, print the summary and give it to Tyra to proofread it and then make her changes. 
+
+Make sure that it's CARRIED OUT by Thursday at the latest. If you don't do it by then, it's going to cause us big problems.
+
+**LOOK INTO**
+
+Meaning: To investigate/examine what the cause of something is, whether something is true or if something is possible.
+
+We still don't know why it happened, but we are LOOKING INTO it. As soon as we know anything, we'll let you know.
+
+What you've suggested we do is a very good idea, but I'm not sure it's possible. I need to LOOK INTO it before I can say if we are going to try to do it or not.
+
+**GO OVER**
+
+Meaning: To explain something to somebody so they understand it and/or know what to do.
+
+If you don't understand how to use a grammatical structure you have learnt in your English class, ask the teacher to GO OVER it again with you. You should understand it then.
+
+Thank you all for agreeing to work for free at tomorrow's festival. Now, I'll GO OVER what's happening on the day and what you each have to do there.
+
+**DEAL WITH**
+
+Meaning: To be responsible for or take responsibility to resolve things (e.g. difficult situations, problems etc...).
+
+"There's a problem with a customer and l don't know what to do."
+
+"Don't worry, leave it to me. I'll DEAL WITH it."
+
+When you work as a receptionist in a hotel you have to DEAL WITH all the problems and requests that the guests staying there may have..
+
+**FIND OUT**
+
+Meaning: To learn something through investigation or discovery that you don't currently know.
+
+"What time does the train to London leave on Friday?"
+
+"I don't know, but I'll FIND OUT and tell you this afternoon."
+
+I was talking to James this morning and I FOUND OUT why he didn't come to the party. His parents told him that he couldn't.
+
+## Examples
+
+1. I've had this problem with my computer as well. If you delete some files and then restart it, it should **sort out** the problem and it will be working again. 
+
+2. I'm on holiday next week, so I can't write the weekly report for next week. So, would you mind **taking care of** it for me while I'm away?
+
+3. Have you **found out** if we are getting an end of the year bonus yet?
+
+4. My boss is on vacation so I not only have my own work to do but I also have to **deal with** his problems also. 
+
+5. The pilot has to **carry out** a series of complex maneuvers procedures.
+
+6. The government will **look into** how to reduce unemployment.
+
+7. We brought in a management consultant to **sort out** the mess.
+
+8. I always **go over** my notes just before I make a presentation.
+
+   
+
+## TODO -> LOOK
+
+![](_img/phrasal-verbs/look.png)
+
+1. Look up - to try to find a particular piece of information by looking in a book or on a list, or by using a computer
+2. Look over - review
+3. Look through - flipping through
+4. Look in - check on
+5. Looking through magazines you are flipping through the pages of the magazines. 
+6. Look on - watch without getting involved.
+7. Look away - To turn one's face away (from someone or something);
+8. Look back - remember also can say look back on reminisce
+9. Look into - investigate
+10. Look up to - respect
+11. Look forward to - get excited about
+
+
+
+**Practice complete the phrasal verb “look” with the appropriate preposition.**
+
+1. Henry **looked through** (reviewed) the reports quickly.
+2. How do you feel when you **look back on** (remember) your career as a manager? Any regrets?
+3. Please can you **look up** (find) this word in the dictionary, I don't know what it means.
+4. I really don't know what I want to do when I leave the company! I'll have to **look into** (investigate) it.
+5. I really **look up to** (respect) my director in the company. I think he's a great role model for me.
+6. I really **look forward to**(excited about it) my annual vacation.
+7. Please could you **look over** (review) my email and check for any mistakes?
+8. When I **look back on** (remember) my life, I realize how much I have grown as a person.
+9. It was the most beautiful sight I had ever seen, it was hard to **look away** (turn my head).
+
+
+
+
+
 ## TODO -> GET 
 
 ![](_img/phrasal-verbs/get.png)
 
 1. Get down to - Заняться чем-то серьезно
-2. Get out of - Избегать чего-то
 3. Get by - Выживать
 4. Get into - Залезть в (машину)
 5. Get out of - Вылезти из (машины)
@@ -538,9 +684,12 @@ Must
 11. Get over - Оправиться от чего-либо, пережить
 12. Get on - Зайти в автобуса
 13. Get off - Выйти из автобуса
-14. Get away - Выходить сухим из воды
+14. Get away (context -> bad, crime) - Выходить сухим из воды
+14. Get out of  (context -> not bad, responsibility) - Избегать чего-то
 15. Get up - Вставать
 16. Get around - Путешествовать
+
+
 
 
 
@@ -686,15 +835,61 @@ I was talking to James this morning and I FOUND OUT why he didn't come to the pa
   - Snow melts and it becomes dirty .. nice weather.
   - Snow melts -> we call it -> stick ?? Snow sticks on the street
 
+## HOWEWORK
+
+Phrasal Verbs**
+
+1.We tried to _______ our point _______, but he just wouldn't listen.
+<u>Get across</u>
+  get around
+Get together
+
+2. My boss and I don't ________ at all.
+   get along
+   <u>get on</u>
+   get in
+3. It's OK. Don't worry. You'll ________ this.
+   get along
+   get on
+   <u>get over</u>
+4. The museum? You should ________ at the third stop.
+   get through
+   <u>get off</u>
+   get on
+5. As soon as he ________ the horse, I knew that he had never been on one before.
+   got on
+   <u>got around</u>
+   got in
+6. Tyra tried to ______ cheating on her Math test but the teacher found out and gave her an “F.”
+   <u>Get away with</u>
+   got rid of
+   got off
+7. I'm really tired because I ________ at 5 AM this morning. 
+   got around
+   <u>got up</u> 
+   got on
+8. Friends can help you to ________ a difficult time in your life. 
+   get around
+   <u>get by</u>
+   get over
+   8.Rachel is short of cash this month, she barely has enough money to _____.
+   Get on
+   Get over
+   <u>Get by</u>
+9. Donnie had to clean his room on Saturday but he tried to _______ it by telling his mom he was allergic to dust.
+   Get by
+   Get out of  
+   <u>Get over</u>  
+
+
+
+## CURRENT
 
 
 
 
-## Didn't have VS There wasn't
 
-- Cities would be nicer places if it didn't have traffic.
-- Cities would be nicer places if there wasn't traffic.
-- Cities would be nicer places if there was less traffic.
+
 
 
 
@@ -826,72 +1021,6 @@ make me . . . . . let me . . . .  know . . . give . . . let me
 **10** We look forward to a successful working relationship  ___________
 
 in the future      <u>on future</u>     at the future     to future . 
-
-
-
-**Phrasal Verbs**
-
-1.We tried to _______ our point _______, but he just wouldn't listen.
-<u>Get across</u>
-  get around
-Get together
-
-2. My boss and I don't ________ at all.
-   get along
-   <u>get on</u>
-   get in
-3. It's OK. Don't worry. You'll ________ this.
-   get along
-   get on
-   <u>get over</u>
-4. The museum? You should ________ at the third stop.
-   get through
-   <u>get off</u>
-   get on
-5. As soon as he ________ the horse, I knew that he had never been on one before.
-   got on
-   <u>got around</u>
-   got in
-6. Tyra tried to ______ cheating on her Math test but the teacher found out and gave her an “F.”
-   <u>Get away with</u>
-   got rid of
-   got off
-7. I'm really tired because I ________ at 5 AM this morning. 
-   got around
-   <u>got up</u> 
-   got on
-8. Friends can help you to ________ a difficult time in your life. 
-   get around
-   <u>get by</u>
-   get over
-   8.Rachel is short of cash this month, she barely has enough money to _____.
-   Get on
-   Get over
-   <u>Get by</u>
-9. Donnie had to clean his room on Saturday but he tried to _______ it by telling his mom he was allergic to dust.
-   Get by
-   Get out of  
-   <u>Get over</u>  
-
-
-
-## 05/12/2019 - Karyn
-
-Share with us.
-
-Служебный роман -> Office romance.
-
-**Chick flicks** -> A movie that appeals mainly to women
-
-A film that indulges in the hopes and dreams of women and/or girls. A film that has a happy, fuzzy, ridiculously unrealistic ending.
-
-- A film that has the following formula:
-- Two people fall in love
-- They get along fine
-- There is some kind of misunderstanding
-- They break up
-- They get back together
-- The end.
 
 
 
