--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -840,7 +840,7 @@ I was talking to James this morning and I FOUND OUT why he didn't come to the pa
 Phrasal Verbs**
 
 1.We tried to _______ our point _______, but he just wouldn't listen.
-<u>Get across</u>
+<u>**Get across**</u>
   get around
 Get together
 
@@ -857,7 +857,7 @@ Get together
    <u>get off</u>
    get on
 5. As soon as he ________ the horse, I knew that he had never been on one before.
-   got on
+   **got on**
    <u>got around</u>
    got in
 6. Tyra tried to ______ cheating on her Math test but the teacher found out and gave her an “F.”
