--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -424,6 +424,7 @@ Must
 
 - Share with us
 - Over to you - Вам слово
+- Go for it - Действуй, дерзай
 
 ## Greeting
 
@@ -547,6 +548,7 @@ Must
 ## General
 
 - Let's wrap up - Давайте заканчивать
+- 
 
 
 
@@ -690,6 +692,262 @@ I was talking to James this morning and I FOUND OUT why he didn't come to the pa
 16. Get around - Путешествовать
 
 
+
+**Exercise**
+
+1. We tried to **get** our point **across**, but he just wouldn't listen.
+   - get across
+   - get around
+   - get together
+
+2. My boss and I don't **get along** at all.
+    - get along
+  - get on
+  - get in
+3. It's OK. Don't worry. You'll **get over** this.
+    - get along
+  - get on
+  - get over
+4. The museum? You should **get off** at the third stop.
+    - get through
+  - get off
+  - get on
+5. As soon as he **got on** the horse, I knew that he had never been on one before.
+    - got on
+  - got around
+  - got in
+6. Tyra tried to **get away with** cheating on her Math test but the teacher found out and gave her an “F.”
+     - get away with
+     - got rid of
+     - got off
+7. I'm really tired because I **got up** at 5 AM this morning. 
+     - got around
+     - got up 
+     - got on
+8. Friends can help you to **get over** a difficult time in your life. 
+     - get around
+     - get by
+     - get over
+9. Rachel is short of cash this month, she barely has enough money to **get by**.
+     - get on
+     - get over
+     - get by
+10. Donnie had to clean his room on Saturday but he tried to **get out of** it by telling his mom he was allergic to dust.
+  - Get by
+  - Get out of
+  - get over  
+
+
+
+**Exercise 2**
+
+1. She went to bed at ten, got ... at seven, took a shower, went to the kitchen, and made breakfast.
+   - down
+   - in
+   - out
+   - **up**
+
+2. We went there by bus. We got on the bus on Fifth Street and got ... at the park.
+   - down
+   - **off**
+   - out of
+   - Through
+
+3. Her sad story really got to me.  I hope she gets ... her grief.
+   - by
+   - **over**
+   - up
+   - with
+
+4. We were on vacation in Greece. We got ... yesterday.
+   - **back**
+   - out
+   - over
+   - through
+
+5. My son tried to get  ... of washing his car and said he would just wait until it rains.
+   - about
+   - **out**
+   - on
+   - off
+
+6. It was a great party. We should get ... again sometime.
+   - around
+   - by
+   - **together**
+   - with
+
+7. He pulled up at the bank and got ... the car.
+   - back to
+   - into
+   - off
+   - **out of**
+
+8. She is a little **under the weather** now, but she will get ... it soon.
+   - by
+   - into
+   - off
+   - **over**
+
+9. His work on his new project is getting ... quite well.
+   - **along**
+   - away
+   - out
+   - over
+
+10. Melanie is always lying, I can’t understand how she gets ... with it.
+    - along
+    - up
+    - **away**
+
+
+
+## TODO -> TAKE
+
+
+
+![](_img/phrasal-verbs/take.png)
+
+1. **Take off** - Like many other phrasal verbs ‘take off’ has more than one meaning.
+   1. to leave the ground plane takes off .
+      Ex. Our flight took off on time.
+   2. to remove something
+      Ex. If it is hot outside, you take off your shirt.
+   3. to take time as a holiday
+      Ex. Chris took off 3 weeks in the middle of July.
+
+2. **Take out**
+   1. to remove something from a fixed position
+   2. to invite someone to dinner, or to any place of entertainment
+   3. to clean (strain, mark, dirt)
+
+3. **Take down**
+   1. to take notes, to write something down
+
+4. **Take up**
+   1. to occupy space or time 
+   2. to become interested in something, to take up a hobby
+
+5. **Take back** 
+   1. to apologize
+
+6. **Take in** 
+
+   1. to make clothes narrower, to alter, to adjust clothes
+
+      For example, you lost weight and now your jeans are too loose in the waist. So you go to the tailor and ask him to take them in the waist.
+      Ex. Can you please take in these jeans in the waist?
+
+   2. to understand something fully
+
+      Ex. Phrasal verbs are difficult to take in.
+
+   3. to take someone in means to trick someone
+
+      Ex. I was completely taken in by him.
+
+7. **Take apart**
+
+   1. to divide something into smaller parts, to disassemble, to break it up
+      Ex. His mobile wasn’t working properly, and he decided to take it apart.
+
+8. **Take after**
+   1. to resemble in appearance or character
+      Ex. Jamie is very ambitious, he takes up after his dad.
+9. **Take over**
+   1. to control or to possess something.
+      Ex. I am going to take over the world.
+      We pulled off the motorway, and Mary took over driving.
+10. **Take on**
+    1. to employ someone.
+       Ex. Will he take me on?
+    2. to accept something, to undertake to do something.
+       Ex. I don’t think I can take this work on at the moment as I am very busy.
+11. **Take down**
+    1. Write notes
+    2. Remove something 
+       I took down all the pictures of my ex-boyfriend.
+
+
+
+**Exercise** 
+
+**HOMEWORK**
+
+1. He looks like his mother; he takes ... her.
+
+   - **after**
+   - to
+   - for
+
+2. Do you take ... your mother or father?
+
+   - <u>after</u>
+   - in
+   - for
+
+3. The plane couldn't take ... because of the heavy snowfall.
+
+   - <u>off</u>
+
+   - up
+
+   - to
+
+4. He took ... swimming when his doctor told him he needed to get more exercise.
+
+   - after
+   - <u>up</u>
+   - in
+
+5. You should take ... Christmas decorations on the 6th of January.
+   - up
+   - to
+   - <u>down</u>
+6. He took ... everything the lecturer said in his notebook.
+   - up
+   - <u>down</u>
+   - on
+
+7. He spoke too quickly for us to take ... everything he said.
+   - <u>in</u>
+   - on
+   - to
+
+8. Can you take this phone number ... for me, please?
+   - up
+   - in
+   - <u>down</u>
+
+9. They took the company ... when it went bankrupt
+   1. in
+   2. down
+   3. over
+
+10. I took my hat ... when I entered the building.
+    - <u>off</u>
+    - on
+    - in
+
+11. She took her clothes ... and went to bed when she got home from work.
+    - <u>off</u>
+    - on
+    - down
+
+12. He refused to take ... what he had said even though he knew he was wrong
+    - in
+    - <u>back</u>
+    - off
+
+13. She took a lodger/rental person ... to help pay the rent.
+    - <u>on</u>
+    - down
+    - in
+
+14. I couldn't put the radio back together after I had taken it ... .
+    - off
+    - <u>out on</u>
+    - apart
 
 
 
@@ -836,50 +1094,6 @@ I was talking to James this morning and I FOUND OUT why he didn't come to the pa
   - Snow melts -> we call it -> stick ?? Snow sticks on the street
 
 ## HOWEWORK
-
-Phrasal Verbs**
-
-1.We tried to _______ our point _______, but he just wouldn't listen.
-<u>**Get across**</u>
-  get around
-Get together
-
-2. My boss and I don't ________ at all.
-   get along
-   <u>get on</u>
-   get in
-3. It's OK. Don't worry. You'll ________ this.
-   get along
-   get on
-   <u>get over</u>
-4. The museum? You should ________ at the third stop.
-   get through
-   <u>get off</u>
-   get on
-5. As soon as he ________ the horse, I knew that he had never been on one before.
-   **got on**
-   <u>got around</u>
-   got in
-6. Tyra tried to ______ cheating on her Math test but the teacher found out and gave her an “F.”
-   <u>Get away with</u>
-   got rid of
-   got off
-7. I'm really tired because I ________ at 5 AM this morning. 
-   got around
-   <u>got up</u> 
-   got on
-8. Friends can help you to ________ a difficult time in your life. 
-   get around
-   <u>get by</u>
-   get over
-   8.Rachel is short of cash this month, she barely has enough money to _____.
-   Get on
-   Get over
-   <u>Get by</u>
-9. Donnie had to clean his room on Saturday but he tried to _______ it by telling his mom he was allergic to dust.
-   Get by
-   Get out of  
-   <u>Get over</u>  
 
 
 
