--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -1101,11 +1101,38 @@ I was talking to James this morning and I FOUND OUT why he didn't come to the pa
 
 ## CURRENT
 
-
-
-
-
-
+1. **Go up / come up / walk up (to ...)** - Подходить
+   - A man **came up to** me in the street and asked me for money.
+2. **Catch up** (**with** somebody) - Догонять
+   - I’m not ready to go yet. You go on and I'll **catch up with** you / I'll **catch you up**
+3. **Keep up** (**with** somebody) - Продолжать
+   - You're walking too fast. I can't **keep up** (**with** you).
+4. **Set up** - Начинать
+   - The government has **set up** a committee to investigate the problem.
+5. **Take up** - Начинать что-то делать (часто о хобби)
+   - Laura **took up** photography a few years ago. She takes really good pictures.
+6. **Fix up**
+   - We've **fixed up** a meeting for next Monday.
+7. **Grow up**
+   - Ann was born in Hong Kong but **grew up** in Australia.
+8. **Bring up**
+   - Her parents died when she was a child and she was **brought up** by her grandparents.
+9. **Clean up / clear up / tidy up**
+   - Look at this mess! Who's going to **tidy up**?
+10. **Wash up**
+    - I hate **washing up**.
+11. **End up** - дело закончилось
+    - There was a fight in the street and three men **ended up** in hospital.
+12. **Give up**
+    - Don't **give up**. Keep trying!
+13. **Make up**
+    - Air is **made up** mainly of nitrogen and oxygen
+14. **Take up**
+    - Most of the space in the room was **taken up** by a large table.
+15. **Turn up / show up**
+    - We arranged to meet David last night, but he didn't turn up
+16. **Use** something **up** = use all of it so that nothing is left
+    - I'm going to make some soup. We have a lot of vegetables and I want to **use them up**.
 
 
 
