--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -641,16 +641,17 @@ I was talking to James this morning and I FOUND OUT why he didn't come to the pa
 ![](_img/phrasal-verbs/look.png)
 
 1. Look up - to try to find a particular piece of information by looking in a book or on a list, or by using a computer
-2. Look over - review
-3. Look through - flipping through
-4. Look in - check on
-5. Looking through magazines you are flipping through the pages of the magazines. 
-6. Look on - watch without getting involved.
-7. Look away - To turn one's face away (from someone or something);
-8. Look back - remember also can say look back on reminisce
-9. Look into - investigate
-10. Look up to - respect
+2. Look up to - respect
+3. Look over - review
+4. Look through - flipping through
+5. Look in - check on
+6. Looking through magazines you are flipping through the pages of the magazines. 
+7. Look on - watch without getting involved.
+8. Look away - To turn one's face away (from someone or something);
+9. Look back - remember also can say look back on reminisce
+10. Look into - investigate
 11. Look forward to - get excited about
+12. Look ahead - **look ahead in advance** British English. Future 
 
 
 
@@ -682,14 +683,14 @@ I was talking to James this morning and I FOUND OUT why he didn't come to the pa
 7. Get back at - Отомстить кому-то
 8. Get along - Ладить с кем-то
 9. Get on (with) - Ладить с кем-то
-10. Get across -> Донести идею до слушателя
+10. Get across -> Донести идею до слушателя// Понимать **TODO**
 11. Get over - Оправиться от чего-либо, пережить
 12. Get on - Зайти в автобуса
 13. Get off - Выйти из автобуса
 14. Get away (context -> bad, crime) - Выходить сухим из воды
 14. Get out of  (context -> not bad, responsibility) - Избегать чего-то
 15. Get up - Вставать
-16. Get around - Путешествовать
+16. Get around - ?? lazy ... Путешествовать **TODO**
 
 
 
@@ -1095,7 +1096,23 @@ I was talking to James this morning and I FOUND OUT why he didn't come to the pa
   - Snow melts and it becomes dirty .. nice weather.
   - Snow melts -> we call it -> stick ?? Snow sticks on the street
 
-## HOWEWORK
+## CURRENT 17/12/19
+
+- How many floors?
+- 2 floors 
+- 3 bathrooms 3 bedrooms 
+- 180,000-200,00 
+- 250,000-300,000 
+- germaphobe 
+- When is house warming party? 
+- A house-warming party is a party traditionally held soon after moving into a new residence. It is an occasion for the hosts to present their new home to their friends, post-moving, and for friends to give gifts to furnish the new home. 
+- I robot 
+- mops 
+- dusting 
+- pet dander
+- Thank you for sharing.
+
+
 
 
 
