--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -548,7 +548,8 @@ Must
 ## General
 
 - Let's wrap up - Давайте заканчивать
-- 
+- Once you start it up
+  - Serzh once you start it up with the first three there.
 
 
 
@@ -668,6 +669,32 @@ I was talking to James this morning and I FOUND OUT why he didn't come to the pa
 9. It was the most beautiful sight I had ever seen, it was hard to **look away** (turn my head).
 
 
+
+**Exercise 2**
+
+1. My neighbor asked me to **look after** her child when she had an emergency at work and had to leave suddenly.
+
+2. This morning James opened the door and his dog ran out. He asked me to help him **look for** the dog.
+
+3. Jane **looks up** the word in the dictionary whenever she is not sure of the spelling or meaning of a word.
+
+4. I have some good news for Anna. I am **looking forward** to telling her.
+
+5. I am looking for Anna.
+
+6. Can you **look over** my homework and tell me if I have any mistakes?
+
+7. I will **look ahead** in advance at my schedule and tell you whether I could attend the meeting on Thursday.
+
+8. She is such a successful woman. Everyone **looks up to** her in the office and showers praise on her.
+
+9. If you **look back** over the last few years, you will find that this work has been worthwhile.
+
+10. I was **looking for** my colleague in a room full of people in the lobby of the hotel.
+
+11. There have been a rash/outbreak of break-ins in my neighborhood, I hope the police **look into** these crimes and take my concerns seriously.
+
+    
 
 
 
@@ -800,6 +827,21 @@ I was talking to James this morning and I FOUND OUT why he didn't come to the pa
     - along
     - up
     - **away**
+
+
+
+**Exercise 2**
+
+1. Even though he was caught speeding, the police let him **get away** with only a $50 ticket.
+2. I was late for work on Monday because I didn't **get up** in time.
+3. That fat kid always **gets out** of doing sports for some reason or other. It’s not fair.
+4. The buses in this town are awful and I prefer to use my mountain bike to **get around**. TODO
+5. The murderer **got away** with his crime because the police couldn't find any evidence.
+6. We will find it easier to **get by** once you get that part-time job at the supermarket.
+7. Melanie never **got over** losing that dream job of hers and has been depressed ever since.
+8. Donnie didn't **get along** with his boss and finally decided to leave the company rather than stay there working for him.
+9. You need to **get across** to your wife how terrible life would be without her. Maybe then, she will change her mind about the divorce.
+10. I asked him to look for that report but he said he never had time to **get around** to doing it. He is lazy, I think! TODO
 
 
 
@@ -952,6 +994,17 @@ I was talking to James this morning and I FOUND OUT why he didn't come to the pa
     - <u>out on</u>
     - apart
 
+**Exercise 2**
+
+1. It is striking how much my son **takes after** his grandfather.
+2. These shoes don’t fit. I am going to **take** them **back** to the store and get a refund.
+3. My New Year’s Eve dress was loose on me so I took it to the tailor and got it **taken in**. 
+4. It is custom at my grandmother’s house to **take** your shoes **off** before entering the living room.
+5. My boss asked me, “How was I going to meet the deadlines if I **take on** too many projects?
+6. If you love Susie why don’t you **take** her **out** on a date?
+7. My former boss **took up** farming after retirement. I had no idea he wanted to be a farmer.
+8. I **took apart** my lamp to fix it and now I can’t remember how to put it back together.
+
 
 
 ## TODO -> OTHERS
@@ -1029,6 +1082,24 @@ I was talking to James this morning and I FOUND OUT why he didn't come to the pa
 
 
 
+## TODO -> UP/TO/BY
+
+![](./_img/phrasal-verbs/up-to-by.png)
+
+
+
+![](./_img/phrasal-verbs/up-to-by2.png)
+
+
+
+![](./_img/phrasal-verbs/up-to-by3.png)
+
+![](./_img/phrasal-verbs/up-to-by4.png)
+
+![](./_img/phrasal-verbs/up-to-by5.png)
+
+
+
 # Russian English
 
 - Take a photo -> Take a picture
@@ -1096,23 +1167,9 @@ I was talking to James this morning and I FOUND OUT why he didn't come to the pa
   - Snow melts and it becomes dirty .. nice weather.
   - Snow melts -> we call it -> stick ?? Snow sticks on the street
 
-## CURRENT 17/12/19
+## CURRENT 
 
-- How many floors?
-- 2 floors 
-- 3 bathrooms 3 bedrooms 
-- 180,000-200,00 
-- 250,000-300,000 
-- germaphobe 
-- When is house warming party? 
-- A house-warming party is a party traditionally held soon after moving into a new residence. It is an occasion for the hosts to present their new home to their friends, post-moving, and for friends to give gifts to furnish the new home. 
-- I robot 
-- mops 
-- dusting 
-- pet dander
-- Thank you for sharing.
-
-
+https://docs.google.com/document/d/1VPEFJsj8VrqXoHiEt_vT-cWSlKXDOwYO5P2zpQoQhAY/edit p 30
 
 
 
@@ -1240,7 +1297,37 @@ I was talking to James this morning and I FOUND OUT why he didn't come to the pa
 
 # JOURNAL
 
-**05/12/2019**
+## Karin - 17/12/19
+
+- How many floors?
+
+- 2 floors
+
+- 3 bathrooms 3 bedrooms
+
+- 180,000-200,00
+
+- 250,000-300,000
+
+- germaphobe
+
+- When is house warming party?
+
+- A house-warming party is a party traditionally held soon after moving into a new residence. It is an occasion for the hosts to present their new home to their friends, post-moving, and for friends to give gifts to furnish the new home.
+
+- I robot
+
+- mops
+
+- dusting
+
+- pet dander
+
+- Pet dander is composed of tiny, even microscopic, flecks of skin shed by cats, dogs, rodents, birds and other animals with fur or feathers.
+
+  
+
+## **05/12/2019**
 
  **Business Email Phrases**
 
