--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -425,6 +425,7 @@ Must
 - Share with us
 - Over to you - Вам слово
 - Go for it - Действуй, дерзай
+- What is that? - Что это
 
 ## Greeting
 
@@ -1094,9 +1095,51 @@ I was talking to James this morning and I FOUND OUT why he didn't come to the pa
 
 ![](./_img/phrasal-verbs/up-to-by3.png)
 
+1. I must get these ideas <u>down</u> in writing. -> on paper
+2. Daniel finished all the cake <u>up</u>. -> completely
+3. I'm writing in pencil so I can rub <u>out</u> my mistakes. -> disappearing
+4. I'll just read <u>over</u> what I've written. -> from start to finish
+5. A woman in the audience shouted something <u>out</u>. -> aloud
+6. The water was turned <u>off</u> for about an hour today. -> disconnected
+7. Nick's aggressive manner frightens people <u>off</u>. -> away, departing
+8. The company wants to keep its costs <u>down</u>. -> becoming less
+9. The embassy was burnt <u>down</u> by terrorists. -> completely to the ground
+10. Someone will have to type all these figures <u>out</u>. -> from start to finish
+11. Social workers were giving <u>out</u> soup to the hungry. -> to different people
+12. Luckily Zedco's sales figures are moving <u>up</u> again. -> increasing
+13. The man was tall and dark. He had a blue jacket <u>on</u>. -> wearing
+14. Business is so bad that many firms have shut <u>down</u>. -> stopping completely
+
 ![](./_img/phrasal-verbs/up-to-by4.png)
 
+
+
+1. You shouldn't leave the television on all night.
+2. Sorry, I forgot. I usually turn it off.
+3. Well, rub it out.
+4. I can't. It's in biro. I'll have to write the whole thing down again.
+5. They're going to pull down this beautiful old building.
+6. I know. Some protesters were hanging ??? (out) leaflets about it.
+7. Hold on a minute. I thought I heard someone call ??? (out-> loud)
+8. **I think you must have imagined ti.**
+
+
+
+
+
 ![](./_img/phrasal-verbs/up-to-by5.png)
+
+wear (put) on
+
+take off
+
+speak up
+
+set off the journey
+
+
+
+
 
 
 
@@ -1171,6 +1214,11 @@ I was talking to James this morning and I FOUND OUT why he didn't come to the pa
 
 https://docs.google.com/document/d/1VPEFJsj8VrqXoHiEt_vT-cWSlKXDOwYO5P2zpQoQhAY/edit p 30
 
+1. I know. Some protesters were hanging ??? (out) leaflets about it.
+2. Hold on a minute. I thought I heard someone call ??? (out-> loud)
+
+
+
 
 
 ## CURRENT
@@ -1212,6 +1260,7 @@ https://docs.google.com/document/d/1VPEFJsj8VrqXoHiEt_vT-cWSlKXDOwYO5P2zpQoQhAY/
 
 # Pronunciation
 
+- Get over -> not аве -> ове TODO
 - Lamborghini - [Ламборгини] - если после "g" стоит "h", то оно читается как "Г".
   - Lamborghini Urus is the world's first Super Sport Utility Vehicle
 - Jaguar - [**ja**·gwaar]
