--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -1083,6 +1083,40 @@ I was talking to James this morning and I FOUND OUT why he didn't come to the pa
 
 
 
+## TODO -> UP
+
+**Murphy p. 298 ex. 143.1 -> Answer p. 378**
+
+2. ~~go up to~~ -> went up to
+3. ~~catch up~~ -> catch up with
+4. ~~keep up~~ -> keep up with
+
+**Murphy p. 298 ex. 143.2 -> Answer p. 378**
+
+2. used up
+3. washed up
+4. ~~will~~ grow up
+5. turn up -> не пришел (+ show up)
+6. gave up
+7. taking up
+8. give up
+9. ~~took up -> осела~~ -> ended up
+10. takes up
+11. make up
+
+**Murphy p. 298 ex. 143.3 -> Answer p. 378**
+
+3. tidy it up
+4. fixed it up
+5. keep up with
+6. ~~brought up~~ -> was brought up
+7. keep it up
+8. went up to
+9. ~~made up~~ -> was made up of
+10. ~~set up~~ -> set it up / fix it up
+
+
+
 ## TODO -> UP/TO/BY
 
 ![](./_img/phrasal-verbs/up-to-by.png)
