--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -1129,12 +1129,12 @@ I was talking to James this morning and I FOUND OUT why he didn't come to the pa
 
 ![](./_img/phrasal-verbs/up-to-by3.png)
 
-1. I must get these ideas <u>down</u> in writing. -> on paper
 2. Daniel finished all the cake <u>up</u>. -> completely
-3. I'm writing in pencil so I can rub <u>out</u> my mistakes. -> disappearing
+2. I'm writing in pencil so I can rub <u>out</u> my mistakes. -> disappearing
+3. Vicky didn't answer. She just -> continue
 4. I'll just read <u>over</u> what I've written. -> from start to finish
 5. A woman in the audience shouted something <u>out</u>. -> aloud
-6. The water was turned <u>off</u> for about an hour today. -> disconnected
+6. The water was turned <u>off</u> for about an hour today. -> disconnected shut out
 7. Nick's aggressive manner frightens people <u>off</u>. -> away, departing
 8. The company wants to keep its costs <u>down</u>. -> becoming less
 9. The embassy was burnt <u>down</u> by terrorists. -> completely to the ground
