--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -1115,6 +1115,24 @@ I was talking to James this morning and I FOUND OUT why he didn't come to the pa
 9. ~~made up~~ -> was made up of
 10. ~~set up~~ -> set it up / fix it up
 
+### My -> Not checked
+
+1. Jack  went up to the fir tree and found a gift in last year. Jack hopes it will be the same in this year.
+2. Nick caught up with Jack when they ran.
+3. Jack wasn't able to keep up with Nick, because he used up his energy and he felt pain in his knee.
+4. Jack sets up his business, he will sell fir trees.
+5. Jack takes up swimming, he became disillusioned with the running.
+6. Nick fixed up his bike, he's going to travel on it.
+7. Jack grew up in Saint-Petersburg.
+8. Jack was brought up by his grandmother, because his parents wasn't able to be with him.
+9. Jack always helped his grandmother and cleaned up his room.
+10. Nick is washing up his clothes, it was getting dirty after biking.
+11. Nick ended it up and went to the party.
+12. Jack gave up running, because he injured his knee and doctor recommended him to stop with running.
+13. Sport makes up important part of Jack's life.
+14. Jack takes up a lot of time on sport.
+15. Nick was on a party, but Jack didn't turn up.
+
 
 
 ## TODO -> UP/TO/BY
@@ -1250,6 +1268,10 @@ https://docs.google.com/document/d/1VPEFJsj8VrqXoHiEt_vT-cWSlKXDOwYO5P2zpQoQhAY/
 
 1. I know. Some protesters were hanging ??? (out) leaflets about it.
 2. Hold on a minute. I thought I heard someone call ??? (out-> loud)
+
+
+
+
 
 
 
